2008-07-22  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvl.texi, doc/cvtool.texi, doc/cvtool.1: Bump
	version to 0.2.5.
	* gnulib/*: Gnulib update.

2008-07-02  Martin Lambers <marlam@marlam.de>

	* cvl/glsl/misc/sort.glsl, cvl/glsl/misc/resize_seq.glsl: Provide our
	own implementation of round(), since not all driver versions have it
	builtin.
	* cvl/glsl/misc/sort.glsl, cvl/glsl/misc/resize_seq.glsl: Avoid the
	integer modulo operator because not all drivers support it.

2008-06-30  Martin Lambers <marlam@marlam.de>

	* cvl/glsl/color/hsl_to_rgb.glsl, cvl/glsl/color/rgb_to_hsl.glsl,
	cvl/glsl/color/lum_to_xyz.glsl, cvl/glsl/color/lum_to_rgb.glsl,
	cvl/glsl/color/rgb_to_lum.glsl: Fix color space conversions lum<->rgb,
	and clean up some others.

2008-06-27  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_io.c: Fix loading of PFS files with one channel and unknown
	format. The bug was introduced on 2008-06-25.

2008-06-26  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_intern.h, cvl/cvl_gl.c: Replace the GLX implementation of
	cvl_gl_context_new() with code from glewinfo, in the hope that it will
	work in more situations.

2008-06-25  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_io.c: Avoid to use cvl_channel_combine() in cvl_read_pfs()
	because the source channels require too much graphics memory. Combine
	the channels in main memory instead.

2008-06-24  Martin Lambers <marlam@marlam.de>

	* cvl/Makefile.am, cvtool/Makefile.am: Fix linking with libGLEW in
	some situations.

2008-06-23  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_io.c: Fix error message when encountering an unexpected EOF
	while reading PFS data.
	* doc/cvtool.texi: Fix formatting of tonemap documentation.

2008-05-17  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* NEWS, doc/cvtool.1, doc/cvtool.texi, doc/cvl.texi: Update for 0.2.4.

2008-05-16  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Remove non-portable MH_STDIN and MH_STDOUT macros.
